# UniversalSnippets

./: Cargo.toml  build.rs  sample.txt
Assets/: manifest.xml
src/: clip_formats.rs  clipboard.rs  main.rs  shortcuts.rs  utils.rs  windowing.rs
